# Chess

./: CMakeLists.txt  CMakePresets.json  README.md  app.cpp  app.hpp  bitboards.cpp  bitboards.hpp  chess.cpp  chess.hpp  chessConst.hpp  fen.cpp  fen.hpp  main.cpp  pch.cpp  pch.hpp  window.cpp  window.hpp
